# nimble_agent

./: .coveragerc  .env.example  .gitattributes  .gitignore  LICENSE  README.md  audit.md  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
.devcontainer/: Dockerfile  bashrc.sh  devcontainer.json
.github/workflows/: ci.yml
SampleWorkspace/: readme.md
ai_coding_agent/: __init__.py
ai_coding_agent/cli/: __init__.py  commands.py  requirements.txt
ai_coding_agent/core/: __init__.py  constants.py  local_workspace_manager.py  logger.py  report_generator.py  requirements.txt  result.py
ai_coding_agent/core/agents/: __init__.py  dev_agent.py  dev_agent_callbacks.py  dev_agent_functions.py  documentation.md  notes_list.py
ai_coding_agent/core/tools/: __init__.py  command_functions.py  file_functions.py  result_types.py  tool_schemas.py
ai_coding_agent/tests/: __init__.py  conftest.py  requirements-dev.txt  requirements.txt  test_cli_e2e.py  test_cli_mocks.py  test_devagent.py  test_devagent_e2e.py  test_devagent_mocks.py  test_devagent_unit.py  test_functions.py  test_local_workspace_manager.py  test_result.py  test_toolkit.py  test_toolkit_mocks.py
scripts/: check-env.sh  ci.sh  clean.sh  install.sh  setup.sh  test_cli.sh  update_deps.sh
